DE7339 Stretched Card fix image on media card by fixing styles on crds-img

--- a/src/components/crds-image/crds-image.scss
+++ b/src/components/crds-image/crds-image.scss
@@ -7,9 +7,10 @@
   background-color: rgb(221, 221, 221);
 
   .crds-img {
-    width: 100%;
-    height: auto;
     display: block;
+    height: 100%;
+    position: absolutez;
+    width: 100%;
   }
   .crds-img.loaded {
     animation-name: fade-in;
